--- a/fibonacci.html
+++ b/fibonacci.html
@@ -15,7 +15,8 @@
         résultat
     </p>
     <script>
-        // commentaire
+        // commentaire 0
+        // commentaire 1
         var limite = prompt('Entrez la limite :');
         var tag_resultat = document.getElementById('resultat');
         var suiteFibonacci = calculSuiteFibonaci(limite);
