encore un commit

--- a/fibonacci.html
+++ b/fibonacci.html
@@ -17,6 +17,7 @@
     <script>
         // commentaire 0
         // commentaire 1
+        // commentaire 2
         var limite = prompt('Entrez la limite :');
         var tag_resultat = document.getElementById('resultat');
         var suiteFibonacci = calculSuiteFibonaci(limite);
