--- a/fibonacci.html
+++ b/fibonacci.html
@@ -18,6 +18,7 @@
         // commentaire 0
         // commentaire 1
         // commentaire 2
+        // commentaire 3
         var limite = prompt('Entrez la limite :');
         var tag_resultat = document.getElementById('resultat');
         var suiteFibonacci = calculSuiteFibonaci(limite);
